newgame было пропущено

--- a/index-.html
+++ b/index-.html
@@ -1001,7 +1001,7 @@ function sro(xxx){//построение вероятных длин ключа
 	);//geon='';geon='';
 	let cane=
 
-	'<select id="satr" onchange="newgame(+this.value);this.blur();uran.blur();"'+
+	'<select id="satr" onchange="(+this.value);this.blur();uran.blur();"'+
 	'style="width:90px;border:1px solid cyan;border-radius:4px">'+
 	ja.join('')
 	+'</select>';
