--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ main{padding:2px 0px 22px}
 <div id="ja06" style="background: yellow;" onclick="cury.unshift(cury.pop());movez()">←</div>
 <div id="ja07" style="background: yellow;" onclick="cury.push(cury.shift());movez()">→</div>
 <div id="ja08" style="background: tomato;">
-	<select id="lik" onchange="this.blur();geon='';wax(this.value)">
+	<select id="lik" onchange="this.blur();wax(this.value)">
 		  <option value="1">П 1</option>
 		  <option value="2">П 2</option>
 		  <option value="3">П 3</option>
@@ -344,12 +344,10 @@ function wax(x){//оброботчик выбора примера
 		case '6':
 		case '7':{
 			edit1.value=bral[+x]['cif'];
-			nalf=bral[+x].bom;
 			newgame(bral[+x].n,bral[+x].bom);
 			break}
 		}
 	geon=edit1.value;
-	lik.blur();
 	};
 function evin(){//перерисовка гребенки
 	evva=document.querySelectorAll('[id^=eka]');
