ссылка морзе и двоичка

--- a/index.html
+++ b/index.html
@@ -506,7 +506,8 @@ main{padding:2px 0px 22px}
 </div>
 </div>
 </main>
-<a href="https://allcalc.ru/node/1977">1011001</a>
+<a href="https://allcalc.ru/node/1977">1011001</a><br>
+<a href="https://morsecodetranslator.com/ru/">-*-*-*</a>
 <script>// style="margin:auto;"
 let bral=[
 {},
